# py-algo-starter

./: .gitignore  README-PATCH.txt  README.md  config.yaml  pyproject.toml  requirements.txt
py_algo_starter/: __init__.py  env.py  fetch_data.py  indicators.py  indicators_pack.py  run_backtest.py  signal_engine.py  strategy_bt.py  symbols.py  utils.py
src/: env.py  fetch_data.py  indicators_pack.py  main.py  risk.py  run_backtest.py  signal_engine.py  strategy_bt.py  uploader.py  utils.py  walk_forward.py
src/indicators/: pta_shim.py
src/py_algo_starter/: __init__.py  run_backtest.py
tools/: make_synthetic_csv.py
