[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-algo-starter"
version = "0.1.0"
description = "Starter de backtesting con fetch, señales e informe QuantStats"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Marcelo Martini" }]

dependencies = [
  "pandas==2.2.2",
  "numpy==1.26.4",
  "backtrader==1.9.78.123",
  "quantstats==0.0.62",
  "requests>=2.31.0",
  "yfinance>=0.2.43",
  "ccxt>=4.3.90",
  "ta>=0.11.0",
  "statsmodels>=0.14.2",
  "ipython==8.27.0"
]

[tool.setuptools]
packages = { find = { include = ["py_algo_starter*"], exclude = ["data*", "notebooks*", "reports*", "assets*"] } }

[tool.setuptools.package-data]
py_algo_starter = ["**/*.txt", "**/*.json", "**/*.csv", "**/*.yaml", "**/*.yml"]

[project.scripts]
py-algo-run = "py_algo_starter.run_backtest:main"
